note editor: fix scrollbar bug when mouse is plugged in

--- a/src/styles/note-editor.scss
+++ b/src/styles/note-editor.scss
@@ -54,7 +54,7 @@
       flex: 1;
 
       position: relative;
-      overflow: scroll;
+      overflow: hidden;
 
       ol, ul {
         margin: 0;
@@ -63,7 +63,7 @@
       .DraftEditor-root {
         height: 100%;
         max-height: 100%;
-        overflow: scroll;
+        overflow-y: scroll;
       }
     }
 
